Ensure proper sizing of home page sections on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ button, a {
 
 a {
     color: var(--color-accent);
+    
     &:not(:has(button)):hover {
         background-color: var(--color-accent-2);
         color: #ffffff;
@@ -117,14 +118,36 @@ main {
     width: 80%;
 }
 
+/* <section> containing each homepage section and associated background */
 .homeSectionContainer {
     display: flex;
     width: 100%;
     min-height: 100vh;
     
     &:first-of-type {
-        min-height: calc(100vh - max(75px, 10vh));
+        min-height: calc(100svh - max(75px, 10vh));
     }
+}
+
+/* The left/text content side of each homepage section */
+.homeSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    width: 60%;
+}
+
+/* The actual text content in each left-side content section */
+.homeSectionContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    flex-grow: 1;
+    width: 90%;
+    justify-self: center;
 }
 
 @media screen and (max-width: 800px) {
